complete: deloy filebase

--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
 				</nav>
 			</header>
 			<div
-				class="slider w-full max-w-screen-2xl h-[530px] bg-[url('/src/img/slide-background.webp')] bg-cover bg-no-repeat bg-bottom">
+				class="slider w-full max-w-screen-2xl h-[530px] bg-[url('../image/slide-background.webp')] bg-cover bg-no-repeat bg-bottom">
 				<div class="w-full h-full flex justify-center items-center bg-gray-900/40">
 					<div class="text-white mx-16 text-center">
 						<div class="uppercase text-md mb-6">best place to buy design</div>
@@ -114,7 +114,7 @@
 				<div class="grid lg:grid-cols-2  lg:gap-6 gap-y-8">
 					<div class="ct-product-card">
 						<div
-							class="bg-[url('/src/img/products/feature-mug-2.webp')] h-[400px] sm:h-[540px] bg-center bg-no-repeat bg-cover">
+							class="bg-[url('../image/products/feature-mug-2.webp')] h-[400px] sm:h-[540px] bg-center bg-no-repeat bg-cover">
 							<a href="" alt="">
 								<div
 									class="w-full h-full hover:bg-gray-900/10 transition duration-300 ease-in-out relative group">
@@ -135,7 +135,7 @@
 					</div>
 					<div class="ct-product-card">
 						<div
-							class="bg-[url('/src/img/products/feature-mug-1.webp')] h-[400px] sm:h-[540px] bg-center bg-no-repeat bg-cover">
+							class="bg-[url('../image/products/feature-mug-1.webp')] h-[400px] sm:h-[540px] bg-center bg-no-repeat bg-cover">
 							<a href="" alt="">
 								<div
 									class="w-full h-full hover:bg-gray-900/10 transition duration-300 ease-in-out relative group">
@@ -170,7 +170,7 @@
 				<div class="grid md:grid-cols-2 lg:grid-cols-3 md:gap-4 gap-8">
 					<div class="ct-product-card">
 						<div
-							class="bg-[url('/src/img/products/more-product-1.webp')] h-[380px] bg-center bg-no-repeat bg-cover">
+							class="bg-[url('../image/products/more-product-1.webp')] h-[380px] bg-center bg-no-repeat bg-cover">
 							<a href="" alt="">
 								<div
 									class="w-full h-full hover:bg-gray-900/10 transition duration-300 ease-in-out relative group">
@@ -195,7 +195,7 @@
 					</div>
 					<div class="ct-product-card">
 						<div
-							class="bg-[url('/src/img/products/more-product-2.webp')] h-[380px] bg-center bg-no-repeat bg-cover">
+							class="bg-[url('../image/products/more-product-2.webp')] h-[380px] bg-center bg-no-repeat bg-cover">
 							<a href="" alt="">
 								<div
 									class="w-full h-full hover:bg-gray-900/10 transition duration-300 ease-in-out relative group">
@@ -220,7 +220,7 @@
 					</div>
 					<div class="ct-product-card">
 						<div
-							class="bg-[url('/src/img/products/more-product-3.webp')] h-[380px] bg-center bg-no-repeat bg-cover">
+							class="bg-[url('../image/products/more-product-3.webp')] h-[380px] bg-center bg-no-repeat bg-cover">
 							<a href="" alt="">
 								<div
 									class="w-full h-full hover:bg-gray-900/10 transition duration-300 ease-in-out relative group">
@@ -241,7 +241,7 @@
 					</div>
 					<div class="ct-product-card">
 						<div
-							class="bg-[url('/src/img/products/more-product-4.webp')] h-[380px] bg-center bg-no-repeat bg-cover">
+							class="bg-[url('../image/products/more-product-4.webp')] h-[380px] bg-center bg-no-repeat bg-cover">
 							<a href="" alt="">
 								<div
 									class="w-full h-full hover:bg-gray-900/10 transition duration-300 ease-in-out relative group">
@@ -262,7 +262,7 @@
 					</div>
 					<div class="ct-product-card">
 						<div
-							class="bg-[url('/src/img/products/more-product-5.webp')] h-[380px] bg-center bg-no-repeat bg-cover">
+							class="bg-[url('../image/products/more-product-5.webp')] h-[380px] bg-center bg-no-repeat bg-cover">
 							<a href="" alt="">
 								<div
 									class="w-full h-full hover:bg-gray-900/10 transition duration-300 ease-in-out relative group">
@@ -283,7 +283,7 @@
 					</div>
 					<div class="ct-product-card">
 						<div
-							class="bg-[url('/src/img/products/more-product-6.webp')] h-[380px] bg-center bg-no-repeat bg-cover">
+							class="bg-[url('../image/products/more-product-6.webp')] h-[380px] bg-center bg-no-repeat bg-cover">
 							<a href="" alt="">
 								<div
 									class="w-full h-full hover:bg-gray-900/10 transition duration-300 ease-in-out relative group">
@@ -304,7 +304,7 @@
 					</div>
 					<div class="ct-product-card">
 						<div
-							class="bg-[url('/src/img/products/more-product-7.webp')] h-[380px] bg-center bg-no-repeat bg-cover">
+							class="bg-[url('../image/products/more-product-7.webp')] h-[380px] bg-center bg-no-repeat bg-cover">
 							<a href="" alt="">
 								<div
 									class="w-full h-full hover:bg-gray-900/10 transition duration-300 ease-in-out relative group">
@@ -325,7 +325,7 @@
 					</div>
 					<div class="ct-product-card">
 						<div
-							class="bg-[url('/src/img/products/more-product-8.webp')] h-[380px] bg-center bg-no-repeat bg-cover">
+							class="bg-[url('../image/products/more-product-8.webp')] h-[380px] bg-center bg-no-repeat bg-cover">
 							<a href="" alt="">
 								<div
 									class="w-full h-full hover:bg-gray-900/10 transition duration-300 ease-in-out relative group">
@@ -346,7 +346,7 @@
 					</div>
 					<div class="ct-product-card">
 						<div
-							class="bg-[url('/src/img/products/more-product-9.webp')] h-[380px] bg-center bg-no-repeat bg-cover">
+							class="bg-[url('../image/products/more-product-9.webp')] h-[380px] bg-center bg-no-repeat bg-cover">
 							<a href="" alt="">
 								<div
 									class="w-full h-full hover:bg-gray-900/10 transition duration-300 ease-in-out relative group">
@@ -378,15 +378,15 @@
 					<div
 						class="md:basis-1/2 flex flex-col md:flex-row justify-start gap-3 sm:gap-5 w-full h-full xsmb-5 md:mb-0">
 						<div
-							class="md:basis-2/3 bg-[url('/src/img/products/magazine-image-1.webp')] h-[280px] w-full bg-center bg-no-repeat bg-cover">
+							class="md:basis-2/3 bg-[url('../image/products/magazine-image-1.webp')] h-[280px] w-full bg-center bg-no-repeat bg-cover">
 						</div>
 						<div
 							class="md:basis-1/3 flex flex-row md:flex-col md:justify-between gap-3 sm:gap-5 w-full h-full">
 							<div
-								class="bg-[url('/src/img/products/magazine-image-2.webp')] md:h-[130px] h-[200px] w-full bg-center bg-no-repeat bg-cover">
+								class="bg-[url('../image/products/magazine-image-2.webp')] md:h-[130px] h-[200px] w-full bg-center bg-no-repeat bg-cover">
 							</div>
 							<div
-								class="bg-[url('/src/img/products/magazine-image-3.webp')] md:h-[130px] h-[200px] w-full bg-center bg-no-repeat bg-cover">
+								class="bg-[url('../image/products/magazine-image-3.webp')] md:h-[130px] h-[200px] w-full bg-center bg-no-repeat bg-cover">
 							</div>
 						</div>
 					</div>
@@ -407,7 +407,7 @@
 		</div><!--END WRAPPER #1!-->
 
 		<div class="ct-parallax">
-			<div class="ct-parallax-image bg-[url('/src/img/parallax.webp')]"></div>
+			<div class="ct-parallax-image bg-[url('../image/parallax.webp')]"></div>
 		</div><!--END PARALLAX SECTION-->
 
 		<div class="content-wrapper ct-static font-Karla text-base mx-auto px-8 relative">
@@ -420,7 +420,7 @@
 				<div class="grid md:grid-cols-2 lg:grid-cols-3 md:gap-4 gap-8">
 					<div class="ct-product-card w-[300px] justify-self-center">
 						<div
-							class="bg-[url('/src/img/products/lifestyle-1.webp')] bg-center bg-no-repeat bg-cover w-full h-[300px]">
+							class="bg-[url('../image/products/lifestyle-1.webp')] bg-center bg-no-repeat bg-cover w-full h-[300px]">
 							<a href="" alt="">
 								<div
 									class="w-full h-full hover:bg-gray-900/10 transition duration-300 ease-in-out relative group">
@@ -444,7 +444,7 @@
 					</div>
 					<div class="ct-product-card w-[300px] justify-self-center">
 						<div
-							class="bg-[url('/src/img/products/lifestyle-2.webp')] bg-center bg-no-repeat bg-cover w-full h-[300px]">
+							class="bg-[url('../image/products/lifestyle-2.webp')] bg-center bg-no-repeat bg-cover w-full h-[300px]">
 							<a href="" alt="">
 								<div
 									class="w-full h-full hover:bg-gray-900/10 transition duration-300 ease-in-out relative group">
@@ -467,7 +467,7 @@
 					</div>
 					<div class="ct-product-card w-[300px] justify-self-center">
 						<div
-							class="bg-[url('/src/img/products/lifestyle-3.webp')] bg-center bg-no-repeat bg-cover w-full h-[300px]">
+							class="bg-[url('../image/products/lifestyle-3.webp')] bg-center bg-no-repeat bg-cover w-full h-[300px]">
 							<a href="" alt="">
 								<div
 									class="w-full h-full hover:bg-gray-900/10 transition duration-300 ease-in-out relative group">
