--- a/src/index.html
+++ b/src/index.html
@@ -86,7 +86,7 @@
 			<div
 				class="story flex flex-col lg:flex-row justify-center items-center gap-8 lg:gap-4 w-[95%] xl:w-[65%] mx-auto">
 				<div class="basis-1/2">
-					<video class="w-full h-full object-cover min-h-[350px]" autoplay loop muted>
+					<video class="w-full h-full object-cover min-h-[350px]" loop muted autoplay playsinline>
 						<source src="./video/coffee_video.mp4" type="video/mp4">
 					</video>
 				</div>
@@ -503,11 +503,11 @@
 					</div>
 					<from method="" class="flex flex-col md:flex-row gap-3 items-center justify-center">
 						<input
-							class="md:basis-3/4 uppercase text-center md:text-left text-gray-200 border-1 px-5 py-4 border-gray-200 w-full md:w-[350px] h-[52px] text-xs tracking-widest"
+							class="md:basis-3/4 uppercase text-center md:text-left text-gray-200 border-1 px-5 py-4 border-gray-200 w-[90%] md:w-[350px] h-[52px] text-xs tracking-widest"
 							type="text" placeholder="customer@coffeestyle.io"
 						>
 						<button id="subcribe"
-							class="md:basis-1/4 uppercase text-gray-900  bg-white border-1 border-white  w-full md:w-max h-[52px]  text-xs font-medium tracking-widest group cursor-pointer self-center md:self-auto">
+							class="md:basis-1/4 uppercase text-gray-900  bg-white border-1 border-white  w-[90%] md:w-max h-[52px]  text-xs font-medium tracking-widest group cursor-pointer self-center md:self-auto">
 							<div class="group-hover:bg-gray-900/10 px-6 py-4">
 								Subscribe
 							</div>
